[tool.poetry]
name = "step-up-python"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "3.11.4"


[tool.poetry.group.dev.dependencies]
black = "^24.3.0"
ruff = "^0.3.5"

[tool.ruff]
select = ["E", "F", "N"]

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
